# td-pack

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.old  build-linux.sh  build-openssl-android.sh  build-openssl-linux.sh  build-openssl-macos.sh  build-tdlib-android.sh  build-tdlib-linux.sh  build-tdlib-macos.sh  build.sh  conanfile.py
.github/workflows/: add_submodule.yml  build.yml  build_android.yml  update.yml
conan_profiles/: linux_aarch64  linux_x86_64
profiles/: linux-aarch64  linux-x86_64  linux_aarch64  linux_aarch64_clang  linux_x86_64  linux_x86_64_clang  macos_arm64  macos_x86_64
scripts/android/: build-tdlib.sh
